# AI-Employee-Bronze-tier

./: .dockerignore  .env.example  .mcp.json  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.claude/skills/audit-weekly/: SKILL.md
.claude/skills/error-recovery/: SKILL.md
.claude/skills/odoo-manager/: SKILL.md
.claude/skills/ralph-loop-coordinator/: SKILL.md
.claude/skills/social-summary/: SKILL.md
AI_Employee_Vault/: Company_Handbook.md  Dashboard.md
AI_Employee_Vault/.obsidian/: workspace.json
AI_Employee_Vault/Drop_Folder/: test_silver_tier.txt
AI_Employee_Vault/Needs_Action/: FILE_test_silver_tier_20260222_195513.md
mcp_servers/audit_generator/: server.py
mcp_servers/error_recovery/: server.py
mcp_servers/facebook_api/: server.py
mcp_servers/odoo_api/: server.py
mcp_servers/twitter_api/: server.py
odoo_config/: odoo.conf
watchers/: facebook_watcher.py  odoo_watcher.py  orchestrator.py  twitter_watcher.py
